--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ProyectoIntegrador
 
-spring.datasource.url=jdbc:mysql://localhost:3306/invopdb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/invopdb?useSSL=false&serverTimezone=America/Argentina/Buenos_Aires
 spring.datasource.username=root
 spring.datasource.password=
 
